# music

./: README.md  app.db  config.py  pyproject.toml  setup.py
app/: __init__.py  forms.py  models.py  music_converter.py  routes.py  video_donwloader.py
app/templates/: 500.html  _song.html  _video.html  base.html  convert.html  edit_profile.html  index.html  login.html  register.html  user.html
migrations/versions/: 00865def2cf1_add_user_id_to_videos.py  4de37d498bf1_new_fields_in_videos.py  4f96b4c80723_add_new_table_videos.py  6d7f66d8b7bd_songs_table.py  b2cbebe064dd_.py  cb70bd1282d1_songs_table.py  cc414697c691_new_fields_in_user_model.py  d1498b2d87b7_.py  d5258e72e429_add_new_column_to_videos.py
src/: config.py  music.py
src/app/: errors.py  models.py
